<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidAnimation</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_property_animations">PropertyAnimations</string>
    <string name="use_animation_resources">Use Animation Resources</string>
    <string name="alpha">Alpha</string>
    <string name="translate">Translate</string>
    <string name="rotate">Rotate</string>
    <string name="scale">Scale</string>
    <string name="set">Set</string>
    <string name="title_activity_drawable_animation">DrawableAnimation</string>
    <string name="title_activity_bounce">Bounce</string>
    <string name="title_activity_keyframe_animation">KeyframeAnimation</string>
    <string name="title_activity_cross_fading_drawables">CrossFadingDrawables</string>
    <string name="title_activity_window_animations">WindowAnimations</string>
    <string name="title_activity_sub">SubActivity</string>
    <string name="title_activity_animated_sub">AnimatedSubActivity</string>
    <string name="title_activity_activity_animations">ActivityAnimations</string>
    <string name="title_activity_picture_details">PictureDetailsActivity</string>
    <string name="title_activity_multi_property_animations">MultiPropertyAnimations</string>
    <string name="title_activity_curved_motion">CurvedMotionActivity</string>
    <string name="title_activity_live_button">LiveButton</string>
    <string name="title_activity_anticipate">Anticipate</string>
    <string name="title_activity_squashand_stretch">SquashandStretch</string>
    <string name="title_activity_player_setup">PlayerSetupActivity</string>
    <string name="title_activity_toon_game">ToonGameActivity</string>
    <string name="title_activity_sliding_fragment">SlidingFragmentActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="photo_credits"><b>Golden Gate Sunset</b> by <b>Romain Guy</b></string>
    <string name="address"><b>Address:</b> Golden Gate Bridge, San Francisco, CA 94129</string>
    <string name="elevation"><b>Elevation:</b>  220\' (67 m)</string>
    <string name="height"><b>Height:</b>  746\' (227 m)</string>
    <string name="construction"><b>Construction started:</b>  1933</string>
    <string name="span"><b>Longest span:</b>  4,200\' (1,280 m)</string>
    <string name="length"><b>Total length:</b>  8,980\' (2,737 m)</string>
    <string name="summary">"The Golden Gate Bridge is a suspension bridge spanning the Golden Gate, the opening of the San Francisco Bay into the Pacific Ocean."</string>
    <string name="bridge">Golden Gate Bridge</string>
    <string name="title_activity_card_flip">CardFlipActivity</string>
    <string name="title_activity_sqashand_stretch">SqashandStretchActivity</string>
    <string name="title_activity_folding_layout">FoldingLayoutActivity</string>

    <string name="title_activity_fold">FoldActivity</string>

    <string name="horizontal">Horizontal</string>
    <string name="vertical">Vertical</string>
    <string name="num_of_folds">Number Of Folds</string>

    <string name="animate">Animate</string>

    <string name="camera_feed">Camera Feed</string>
    <string name="static_image">Static Image</string>

    <string name="sepia_effect_off">Sepia Off</string>

    <string-array name="num_of_folds_array">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>1</item>
    </string-array>
</resources>
