<com.desmond.androidanimation.FragmentAnimation.FractionalLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/slide_fragment_horizontal_margin"
    android:layout_marginRight="@dimen/slide_fragment_horizontal_margin"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context="com.desmond.androidanimation.FragmentAnimation.TextFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bridge"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="26sp"
        android:layout_marginBottom="@dimen/text_vertical_margin"
        android:layout_marginLeft="@dimen/text_horizontal_margin"
        android:layout_marginRight="@dimen/text_horizontal_margin" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/summary"
        android:textSize="18sp"
        android:textColor="#000000"
        android:layout_marginBottom="@dimen/text_vertical_margin"
        android:layout_marginLeft="@dimen/text_horizontal_margin"
        android:layout_marginRight="@dimen/text_horizontal_margin" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/length"
        android:textColor="#000000"
        android:layout_marginLeft="@dimen/text_horizontal_margin"
        android:layout_marginRight="@dimen/text_horizontal_margin" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/span"
        android:textColor="#000000"
        android:layout_marginLeft="@dimen/text_horizontal_margin"
        android:layout_marginRight="@dimen/text_horizontal_margin" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/construction"
        android:textColor="#000000"
        android:layout_marginLeft="@dimen/text_horizontal_margin"
        android:layout_marginRight="@dimen/text_horizontal_margin" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/height"
        android:textColor="#000000"
        android:layout_marginLeft="@dimen/text_horizontal_margin"
        android:layout_marginRight="@dimen/text_horizontal_margin" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/elevation"
        android:textColor="#000000"
        android:layout_marginLeft="@dimen/text_horizontal_margin"
        android:layout_marginRight="@dimen/text_horizontal_margin" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textColor="#000000"
        android:layout_marginLeft="@dimen/text_horizontal_margin"
        android:layout_marginRight="@dimen/text_horizontal_margin" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/photo_credits"
        android:textColor="#000000"
        android:textSize="10sp"
        android:layout_marginTop="@dimen/text_vertical_margin"
        android:layout_marginLeft="@dimen/text_horizontal_margin"
        android:layout_marginRight="@dimen/text_horizontal_margin" />

</com.desmond.androidanimation.FragmentAnimation.FractionalLinearLayout>
